Fix content spacing for titles and rulers

--- a/theme/src/components/App/App.module.scss
+++ b/theme/src/components/App/App.module.scss
@@ -35,6 +35,15 @@
     }
   }
 
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    // Reduce default top margins because they're really big in flex layouts.
+    @apply mt-4;
+  }
+
   h2 {
     /*
       The designs requires a 35px margin between the heading and the top of
@@ -127,6 +136,11 @@
         top: unset;
         left: unset;
       }
+    }
+
+    // Reduce margins horizontal dividers.
+    hr.docutils {
+      @apply my-4;
     }
   }
 }
